rename Evulation phase to dynamic phase.

--- a/spec/iclang.org
+++ b/spec/iclang.org
@@ -76,7 +76,7 @@ Individual, pluggable and reusable piece of software.
 
 *** Port
     
-** Evaluation Phase
+** Dynamic Phase
 *** Information Stream
 
 An entity that packed data, state passed throw the process pipeline.
