--- a/spec/study-coordination-language.org
+++ b/spec/study-coordination-language.org
@@ -7,7 +7,8 @@
 * Patterns
 - [[http://workflowpatterns.com][Workflow Patterns]]
 - [[http://communicationtheory.org/patterns-of-communication/][Communication Patters]]
-
+- Dsitrubuted Computing Software Architecture Pattern 
+  - [[http://www.cs.wustl.edu/~schmidt/POSA/POSA4/][Pattern-Oriented Software Architecture: A Pattern Language for Distributed Computing]]
 * Coordination Language And Models
 ** Papers
 *** Coordination models and languages, GA Papadopoulos, F Arbab, 1999
