--- a/spec/spec-iclang.org
+++ b/spec/spec-iclang.org
@@ -17,7 +17,7 @@ HyperScript File 是一個能被符合下列[[http://json-schema.org/][JSON Sche
       "required":["properties", "processes", "connections"],
       "properties": {
           "comment": {"$ref":"#/difinitions/comment"},
-          "properties": {"$ref":"#/difinitions/propertiest"},
+          "properties": {"$ref":"#/difinitions/properties"},
           "processes": {"$ref":"#/difinitions/processes"},
           "connections": {"$ref":"#/difinitions/connections"},
           "inports": {"$ref":"#/difinitions/inports"},
