add test case of inports, exports fieldd validation in hyperscript file test.

--- a/spec/spec-iclang.org
+++ b/spec/spec-iclang.org
@@ -60,10 +60,26 @@ HyperScript File 是一個能被符合下列[[http://json-schema.org/][JSON Sche
               }
           },
           "inports":{
-              "type":"array"
+              "type":"array",
+              "items":{
+                  "type":"object",
+                  "required":["name","dest"],
+                  "properties":{
+                      "name":{"type":"string"},
+                      "dest":{"$ref":"#/definitions/process_port"}
+                  }
+              }
           },
           "exports":{
-              "type":"array"
+              "type":"array",
+              "items":{
+                  "required":["name", "src"],
+                  "type":"object",
+                  "properties":{
+                      "name":{"type":"string"},
+                      "src":{"$ref":"#/definitions/process_port"}
+                  }
+              }
           },
           "comment":{
               "type":"string"
